fixed spacing in slider

--- a/src/css/Metronome.css
+++ b/src/css/Metronome.css
@@ -42,6 +42,7 @@
 }
 
 .slider {
+  padding-top: 2px;
   margin-left: -2px;
   height: 30px;
   width: 80px;
